swaync fix, track systemd service, blurred bg in overview, p10k

--- a/dot_config/waybar/styles/vert10.css
+++ b/dot_config/waybar/styles/vert10.css
@@ -72,7 +72,7 @@ window#waybar .modules-right {
 }
 
 window#waybar #custom-launcher {
-  font-size: 24px;
+  font-size: 20px;
   margin: 0 0.3em;
   background: transparent;
   color: @main-fg-alt;
